<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/mainMenu_margin">

            <ImageView
                android:id="@+id/imgRegistration"
                android:layout_width="@dimen/Main_home_Icon_weight"
                android:layout_height="@dimen/Main_home_Icon_Height"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/add_customer" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/imgRegistration"
                android:layout_marginTop="@dimen/mainMenu_margin"
                android:text="@string/mainMenu_Registration"
                android:textAlignment="center"
                android:textSize="@dimen/npdsf_main_menu_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/mainMenu_margin">

            <ImageView
                android:id="@+id/imgIncomplete"
                android:layout_width="@dimen/Main_home_Icon_weight"
                android:layout_height="@dimen/Main_home_Icon_Height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/place_order" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/imgIncomplete"
                android:layout_marginTop="@dimen/mainMenu_margin"
                android:text="@string/mainMenu_place_order"
                android:textAlignment="center"
                android:textSize="@dimen/npdsf_main_menu_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1">

        <RelativeLayout
            android:layout_width="173dp"
            android:layout_height="230dp"
            android:layout_margin="@dimen/mainMenu_margin">

            <ImageView
                android:id="@+id/imgComplete"
                android:layout_width="@dimen/Main_home_Icon_weight"
                android:layout_height="@dimen/Main_home_Icon_Height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/show_all_product" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/imgComplete"
                android:layout_marginTop="@dimen/mainMenu_margin"
                android:text="@string/mainMenu_show_all_product"
                android:textAlignment="center"
                android:textSize="@dimen/npdsf_main_menu_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/card2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/mainMenu_margin">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="@dimen/Main_home_Icon_weight"
                android:layout_height="@dimen/Main_home_Icon_Height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/show_all_order" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/imgUser"
                android:layout_marginTop="@dimen/mainMenu_margin"
                android:text="@string/mainMenu_show_all_order"
                android:textAlignment="center"
                android:textSize="@dimen/npdsf_main_menu_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25"
        />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75"
        />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".50"
        />

    <!--&lt;!&ndash;<android.support.v7.widget.CardView&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/card5"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="0dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginStart="12dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginLeft="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginTop="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginEnd="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginRight="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;app:cardCornerRadius="6dp"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintBottom_toTopOf="@+id/guideline6"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintEnd_toStartOf="@+id/guideline3"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintTop_toTopOf="@+id/guideline5">&ndash;&gt;-->

        <!--&lt;!&ndash;<RelativeLayout&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_margin="@dimen/mainMenu_margin">&ndash;&gt;-->

            <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/imgUser5"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="@dimen/Main_home_Icon_weight"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="@dimen/Main_home_Icon_Height"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_centerHorizontal="true"&ndash;&gt;-->
                <!--&lt;!&ndash;android:background="@drawable/ic_attendance_icon" />&ndash;&gt;-->


            <!--&lt;!&ndash;<TextView&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="27dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_below="@+id/imgUser5"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_marginTop="@dimen/mainMenu_margin"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/mainMenu_show_all_order"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textAlignment="center"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textSize="@dimen/npdsf_main_menu_text_size"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textStyle="bold" />&ndash;&gt;-->
        <!--&lt;!&ndash;</RelativeLayout>&ndash;&gt;-->
    <!--&lt;!&ndash;</android.support.v7.widget.CardView>&ndash;&gt;-->

    <!--&lt;!&ndash;<android.support.v7.widget.CardView&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/card6"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="0dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginStart="12dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginLeft="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginTop="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginEnd="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginRight="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;app:cardCornerRadius="6dp"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintBottom_toTopOf="@+id/guideline6"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintStart_toStartOf="@+id/guideline3"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintTop_toBottomOf="@+id/card4">&ndash;&gt;-->

        <!--&lt;!&ndash;<RelativeLayout&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="173dp"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="230dp"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_margin="@dimen/mainMenu_margin">&ndash;&gt;-->

            <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/imgComplete2"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="@dimen/Main_home_Icon_weight"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="@dimen/Main_home_Icon_Height"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_centerHorizontal="true"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_marginTop="5dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:background="@drawable/ic_attendance_icon" />&ndash;&gt;-->


            <!--&lt;!&ndash;<TextView&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="40dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_below="@+id/imgComplete2"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_marginTop="@dimen/mainMenu_margin"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/mainMenu_show_all_product"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textAlignment="center"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textSize="@dimen/npdsf_main_menu_text_size"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textStyle="bold" />&ndash;&gt;-->
        <!--&lt;!&ndash;</RelativeLayout>&ndash;&gt;-->
    <!--</android.support.v7.widget.CardView>-->
</android.support.constraint.ConstraintLayout>